<resources>

    <string name="app_name">COBA GUARD</string>
    <string name="version">version 5.3.11; &#169; COBA 2015</string>
    <string name="version_short">5.3.11</string>

    <string name="img_content_desc">img</string>

    <string name="confirm_question_privacy">Для продолжения использования приложения необходимо
        принять нашу Политику Конфиденциальности - http://www.sowa.ru/privacy_cobaguard.html</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_drawer_settings_item">Настройки</string>
    <string name="nav_drawer_passports_update_item">Обновление</string>
    <string name="nav_drawer_exit_item">Выход</string>
    <string name="nav_drawer_objects_item">Объекты</string>
    <string name="nav_drawer_signals_item">Сигналы</string>
    <string name="nav_drawer_passports_item">Паспорта</string>

    <string name="nav_header_logo_text">Группа компаний "СОВА"</string>

    <string name="err_data">Произошла ошибка</string>

    <string name="pref_set_server_title">Адрес сервера</string>
    <string name="pref_set_sms_sender_title">Источник смс</string>
    <string name="pref_set_alarm_title">Период проверки постановок в охрану</string>
    <string name="pref_set_auto_update_title">Автообновление паспортов</string>
    <string name="pref_set_auto_update_summary">Обновление автоматически запускается при подключении к интернету</string>
    <string name="pref_view_passports_path_title">Расположение паспортов</string>
    <string name="pref_set_auto_update_type_title">Автообновление только по wi-fi</string>
    <string name="pref_set_auto_update_type_summary">Автообновление запускается только через wi-fi соединение</string>

    <string name="passports_update_last_update_title">Последнее обновление</string>
    <string name="passports_update_all_title">Обновление всех паспортов</string>
    <string name="passports_update_summary">Долгое нажатие для запуска</string>
    <string name="passports_update_object_title">Обновление объекта</string>
    <string name="passports_update_connect_title">Соединяемся …</string>
    <string name="passports_update_proccess_title">Идет обновление …</string>
    <string name="passports_update_complite_title">Обновление завершено</string>
    <string name="passports_update_procces_start_count">0/0</string>
    <string name="passports_update_procces_start_proc">0%</string>
    <string name="passports_update_no_files">Файлов для обновления нет</string>

    <string name="no_internet">Нет соединения с интернетом</string>
    <string name="sys_data_change">Обнаружено изменение системной даты, обновление невозможно</string>
    <string name="no_server_ip">Укажите адрес сервера</string>
    <string name="no_server_connect">Сервер недоступен</string>

    <string name="update_double_error">Обновление уже запущено</string>


    <string name="ok">OK</string>
    <string name="confirm">Принять</string>
    <string name="cancel">Отмена</string>
    <string name="close">Закрыть</string>

    <string name="confirm_title_alert">Внимание!</string>
    <string name="confirm_question">Вы уверены ?</string>
    <string name="total_passports">"Всего паспортов: "</string>
    <string name="create_temp_folder_error">Ошибка создания временной папки</string>
    <string name="passports_count_error">ПАСПОРТА НЕ ОБНАРУЖЕНЫ</string>
    <string name="sms_scan_title">Сканируем смс …</string>

    <string name="object_number_hint">№ объекта</string>
    <string name="dialog_object_dwnl_title">Объект для загрузки</string>
    <string name="guard_off_button">Снять</string>
    <string name="err_data_object_number">Некорректный номер объекта</string>

    <string name="double_query_error">Дождитесь исполнения предыдущего запроса!</string>

    <string name="signals_status_complite">Файл получен</string>
    <string name="signals_status_wait">Ожидание загрузки …</string>

    <string name="status_auth_error">Ошибка авторизации на сервере</string>

    <string name="guard_off_text">Объект снят с охраны</string>
    <string name="guard_on_text">Объект под охраной</string>

    <string name="guard_status_on">Успешно поставлен на охрану</string>
    <string name="guard_status_off">Успешно снят с охраны</string>
    <string name="guard_status_wait">Ожидание подтверждения …</string>
    <string name="guard_err_data">ОШИБКА: повторите запрос</string>
    <string name="guard_query_error">ОШИБКА: обнулите файл</string>

    <string name="err_no_sms_for_guard_off">Смс с данным номером объекта не обнаружена</string>
    <string name="notification_title_legend">Нажмите для запуска</string>
    <string name="passports_no_update_error">ТРЕБУЕТСЯ ОБНОВИТЬ БД ПАСПОРТОВ</string>
    <string name="passports_update_find_title">Поиск файлов</string>
    <string name="pref_view_version_title">Версия программы</string>

    <string name="open_map_error">Список пуст</string>
    <string name="address_map_error">Ошибка списка адресов</string>
    <string name="me_marker_title">Вы тут</string>
    <string name="no_internet_or_gps">Включите интернет или GPS приемник</string>

    <string name="update_news_dialog_title">Новое:</string>
    <string name="update_news_dialog_text_500">Для просмотра расположения объектов из списка паспортов
        на карте включите доступ в интернет, загрузите паспорта в список и нажмте красную кнопку с
        изображением карты.</string>


    <string name="alert_guard_dialog_title">Внимание!</string>
    <string name="alert_guard_dialog_text">Не забудьте поставить все обьекты на охрану!</string>

    <string name="positive_dialog_button">Понятно!</string>
</resources>
