<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:key="pref_view_version"
        android:title="@string/pref_view_version_title"
        android:enabled="false">
    </ListPreference>

    <ListPreference
        android:key="pref_view_passports_path"
        android:title="@string/pref_view_passports_path_title"
        android:enabled="false">
    </ListPreference>

    <ListPreference
        android:key="pref_set_sms_sender"
        android:title="@string/pref_set_sms_sender_title">
    </ListPreference>

    <ListPreference
        android:key="pref_set_server"
        android:title="@string/pref_set_server_title"
        android:defaultValue="false">
    </ListPreference>

    <ListPreference
        android:key="pref_set_alarm_period"
        android:title="@string/pref_set_alarm_title"
        android:defaultValue="false">
    </ListPreference>

    <SwitchPreference
        android:key="pref_set_auto_update"
        android:title="@string/pref_set_auto_update_title"
        android:summary="@string/pref_set_auto_update_summary"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="pref_set_auto_update_wifi"
        android:title="@string/pref_set_auto_update_type_title"
        android:summary="@string/pref_set_auto_update_type_summary"
        android:defaultValue="false"
        android:dependency="pref_set_auto_update"/>


</PreferenceScreen>