<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">



    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_drawer_passports_item"
            android:icon="@drawable/ic_drawer_passports_item"
            android:title="@string/nav_drawer_passports_item" />
        <item
            android:id="@+id/nav_drawer_signals_item"
            android:icon="@drawable/ic_drawer_signals_item"
            android:title="@string/nav_drawer_signals_item" />
        <item
            android:id="@+id/nav_drawer_objects_item"
            android:icon="@drawable/ic_drawer_objects_item"
            android:title="@string/nav_drawer_objects_item" />
        <item
            android:id="@+id/nav_drawer_settings_item"
            android:icon="@drawable/ic_drawer_settings_item"
            android:title="@string/nav_drawer_settings_item" />
        <item
            android:id="@+id/nav_drawer_passports_update_item"
            android:icon="@drawable/ic_drawer_passports_update_item"
            android:title="@string/nav_drawer_passports_update_item" />
        <item
            android:id="@+id/nav_drawer_exit_item"
            android:icon="@drawable/ic_drawer_exit_item"
            android:title="@string/nav_drawer_exit_item" />
    </group>



</menu>